<resources>
    <string name="app_name">BiciParche</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">Este campo no se puede dejar en blanco</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>

    <!-- Strings main-->
    <string name="static_main_routes">Mis Rutas</string>
    <string name="static_main_groups">Mis Grupos</string>
    <string name="toast_group_created">Grupo creado con exito</string>
    <string name="btn_text_new_route">Nueva Ruta</string>
    <string name="btn_text_new_group">Nuevo Grupo</string>


    <!-- Strings titles-->
    <string name="title_new_route">Crear nueva ruta</string>
    <string name="toast_route_created">Se ha creado la ruta:</string>


    <!-- Strings new route-->
    <string name="static_route_name">Nombre de la ruta</string>
    <string name="static_route_days">¿Que dias utilizará la ruta?</string>
    <string name="static_route_time">Horario en que utilizará la ruta</string>
    <string name="static_route_start">Seleccione la ruta</string>

    <string name="btn_text_select_location">Seleccionar Ruta</string>
    <string name="btn_text_create_route">Crear Ruta</string>
    <string name="btn_text_cancel_route">Cancelar</string>
    <string name="btn_text_update_route">Actualizar Ruta</string>
    <string name="btn_text_delete_route">Borrar Ruta</string>

    <string name="error_empty_name">El nombre de la ruta no puede estar vacio</string>
    <string name="error_empty_days">Seleccione al menos un dia</string>
    <string name="error_empty_hour">Seleccione una hora</string>
    <string name="error_empty_location">Seleccione una ruta</string>
    <string name="toast_error_route_not_created">No se creo la ruta, intente de nuevo</string>

    <string name="title_activity_create_route">Map</string>

    <!-- Strings create route-->
    <string name="static_create_map_origin">Seleccione el punto de origen</string>
    <string name="static_create_map_dest">Seleccione el punto de destino</string>
    <string name="static_create_map_modify">Modifique la ruta</string>
    <string name="static_create_map_marks">Marcadores restantes:</string>
    <string name="btn_map_route_delete">Borar Ruta</string>
    <string name="btn_map_done">Listo!</string>

    <!-- Strings get user username-->
    <string name="static_insert_username">Ingrese el correo del usuario</string>

    <!-- Strings profile operations-->
    <string name="static_select_career">Carrera</string>
    <string name="static_select_department">Facultad</string>
    <string name="btn_profile_done">Listo!</string>
    <string name="toast_error_profile_photo">No es posible cargar la fotografia</string>
    <string name="error_empty_field">Este campo no puede estar vacío</string>

    <!-- Strings map list-->
    <string name="static_map_list_name">Nombre:</string>
    <string name="static_map_list_days">Dias:</string>
    <string name="static_map_list_hoyr">Hora:</string>

    <!-- Strings create group-->
    <string name="static_group_name">Nombre del Grupo</string>
    <string name="static_group_members">Miembros del Grupo</string>
    <string name="btn_text_create_group">Crear Grupo</string>
    <string name="btn_text_add_member">Buscar Usuario</string>

    <!-- Strings create group-->

    <string name="static_list_group_members">No. de usuarios:</string>
    <string name="static_group_users">Usuarios:</string>
    <string name="static_list_group_hour">Hora:</string>
    <string name="static_list_group_day">Dias:</string>
    <string name="btn_text_group_leave">Salir del grupo</string>
    <string name="user_not_found">Usuario no existe</string>

    <!-- Strings Menu-->

    <string name="menu_settings">Configuración</string>
    <string name="menu_terms_and_conditions">Terminos y condiciones</string>
    <string name="menu_privacy">Politica de Privacidad</string>
    <string name="menu_edoit_profile">Editar mi Perfil</string>


    <!-- Strings Menu-->
    <string name="terms_condition_content">
        Al acceder y hacer uso de la plataforma BiciParche UN, el usuario acepta los términos y condiciones descritos a
        continuación y se compromete a cumplirlos. De igual manera acepta cumplir con la normatividad vigente según la
        legislación colombiana.
        I. Objeto
        BiciParche UN es un sistema que permite compartir rutas en bicicleta para estudiantes de la Universidad
        Nacional, en donde se opte por mejorar la movilidad en la ciudad de Bogotá, con posible crecimiento de la
        cobertura, ahorro de tiempo en cuanto al desplazamiento de un lugar a otro y que a la vez sea amigable con el
        medio ambiente.
        Ofreciendo una mejor oportunidad de mejorar la seguridad y hacer amigos, con facilidad de acceso. Una aplicación
        permitirá a las personas compartir información fácilmente y ponerse en contacto sin gastar mucho tiempo.
        II. Definiciones
        BiciParche UN
        BiciParche UN es una (aplicación informática móvil) perteneciente a un grupo de 4 estudiantes de la Universidad
        Nacional de Colombia, que conecta a usuarios de bicicleta que compartan un mismo destino.
        Usuario
        Se refiere a un miembro perteneciente a la Universidad Nacional de Colombia, que acepta los términos y
        condiciones de uso, siendo éste un usuario registrado.
        Ruta
        Se define como un camino determinado que va de un sitio a otro previsto para un viaje, las rutas se calcularan
        de acuerdo a las coordenadas que el usuario digite de inicio y final del trayecto.
        III. Grados de Acceso
        Usuarios No Registrados
        Se refiere a los usuarios que no han sido registrados y por tanto no han aceptado los términos y condiciones de
        uso de BiciParche UN, el acceso a la información de usuarios, viajes y grupos de la plataforma web es limitado
        para este tipo de usuarios.
        Usuarios Registrados
        Se refiere a todos los usuarios, que han aceptado los términos y condiciones de uso. Los usuarios registrados
        tendrán acceso a la información de grupos, ruta y perfiles de usuario.
        IV. Obligaciones de los usuarios
        Verificar su relación con la Universidad Nacional
        Es obligación del usuario su relación con la Universidad a través del correo de dominio Unal.
        Suministrar información real
        Los usuarios se comprometen a suministrar información verídica y actualizada. BiciParche UN se reserva el
        derecho de cancelar cuentas de usuarios con información falsa, dudosa o engañosa.
        Hacer buen uso de la cuenta
        Las cuentas de acceso a BiciParche UN son única y exclusivamente para agendar y crear rutas de viajes en
        bicicleta, cualquier otro uso es prohibido.
        VI. Reglas de convivencia
        Publicar viajes reales
        Los usuarios se comprometen a publicar viajes que estén seguros de realizar.
        Respetar al otro
        Todos los usuarios deben ser tratados con dignidad y respeto. Se deben evitar conductas que molesten a las demás
        personas que comparten la ruta.
        Presentarse a tiempo
        Los usuarios se comprometen a presentarse en el sitio pactado al menos 10 minutos antes de la hora acordada, los
        usuarios de la ruta tendrán un tiempo de espera máximo de 10 minutos, pasado este tiempo se asume que el usuario
        no viajará con este parche.
        VII. Responsabilidad de BiciParche UN
        Confidencialidad de datos
        BiciParche UN utiliza solo un tipo de acceso para el registro de usuarios en su plataforma:
        1. A través del correo institucional de la Universidad Nacional, esta herramienta garantiza la relación del
        usuario con la Universidad y que la cuenta pertenece a una persona real.
        BiciParche Un se compromete a mantener la confidencialidad de la información de acceso de sus usuarios (usuario
        y contraseña) y limita su acceso a dicha información para recuperar, modificar, cancelar o realizar el
        mantenimiento de las cuentas de usuario.
        Uso de Información
        Queda prohibido el uso, publicación y/o divulgación de información ofensiva, racista, falsa y/o cualquier tipo
        de propaganda ajena al propósito de la aplicación. Nos reservamos el derecho a censurar/ eliminar aquellos
        mensajes que no cumplan con las reglas de convivencia.
        VIII. Propiedad Intelectual
        La totalidad de los contenidos de esta página web incluyendo códigos de programación, imágenes, textos,
        animaciones, nombres, logotipos y tono de colores o cualquier otro elemento de diseño de la plataforma VCC son
        propiedad de Camilo Andrés Arias, David Barrera, Daniel Fernando Eslava y Jennifer Tatiana Jimenez.
        IX. Contacto y notificaciones
        Si tienes dudas acerca de nuestros términos y condiciones, puedes contactarnos en: biciparcheun@gmail.com
    </string>

    <string name="privacy_content">
        Nuestra política de privacidad busca informar a nuestros usuarios sobre el uso que le damos a la "Información
        personal" de cada usuario en la red. Por favor lea nuestra política de privacidad cuidadosamente para entender
        como recolectamos, usamos, protegemos y manejamos su información personal a través de la plataforma.\n
        ¿Qué información recolectamos de nuestros usuarios?\n
        Al registrarse y utilizar la plataforma BiciParche UN es posible que solicitemos información personal tal como
        nombre, correo electrónico dominio Unal, nombre de la facultad, carrera, y una foto personal.

        ¿Cuándo recolectamos información de nuestros usuarios?
        Recolectamos información al registrarse en la plataforma de nuestra aplicación móvil.

        ¿Cómo protegemos la información de nuestros usuarios?
        Mantenemos la información personal de los usuarios en redes seguras. El acceso a estas redes está limitado a
        pocas personas quienes efectúan actividades de mantenimiento y están obligados a mantener esta información
        confidencial.

        ¿Por qué recolectamos tu dirección de correo electrónico?:
        Para crear tu nombre de usuario y verificar tu relación con la Universidad Nacional.

    </string>

</resources>
