<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".Forms.GroupOperationsActivity" android:weightSum="1"
        android:gravity="center">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="250dp" android:layout_weight="0.80" android:layout_margin="5dp">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/static_group_name"
                android:ems="10"
                android:id="@+id/field_group_name"/>

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/static_route_days"
                android:id="@+id/text_view_route_days"/>

        <com.unal.davsanba.biciparche.Util.MultiSelectionSpinner
                android:id="@+id/day_selection_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_margin="10dp"
                android:spinnerMode="dialog"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_gravity="right" android:layout_margin="10dp">
            <EditText
                    android:layout_width="148dp"
                    android:layout_height="wrap_content"
                    android:inputType="time"
                    android:ems="10"
                    android:id="@+id/field_group_time"
                    android:layout_gravity="center" android:textAlignment="center"
                    android:textSize="@dimen/abc_text_size_large_material"/>
            <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/btn_show_time_picker" android:src="@drawable/ic_time_picker"
                    android:scaleType="fitCenter" android:background="@android:color/transparent"/>
        </LinearLayout>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_text_select_location"
                android:drawableLeft="@drawable/ic_location_picker"
                android:layout_alignLeft="@+id/username_icon"
                android:id="@+id/btn_show_place_picker" android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="200dp" android:gravity="fill_vertical|center_horizontal"
            android:weightSum="1" android:layout_margin="5dp">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/static_group_users"
                android:id="@+id/textView3"/>
        <ListView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/listView_show_members" android:layout_weight="0.87"/>
        <Button
                android:layout_width="match_parent"
                android:shadowColor="@color/colorPrimaryDark"
                android:layout_height="wrap_content"
                android:text="@string/btn_text_add_member"
                android:id="@+id/btn_search_user" android:layout_marginTop="5dp" android:singleLine="false"/>
    </LinearLayout>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_text_create_group"
            android:id="@+id/btn_group_done"/>
</LinearLayout>
