<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".Forms.NewPersonalRouteActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/form" android:layout_alignParentBottom="true" android:layout_alignParentEnd="true"
            android:textAlignment="center">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/static_route_name"
                android:id="@+id/text_view_route_name"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/field_route_name" android:layout_gravity="right" android:layout_margin="10dp"
                android:inputType="text"
                android:maxLines="1"/>
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/static_route_days"
                android:id="@+id/text_view_route_days"/>

        <com.unal.davsanba.biciparche.Util.MultiSelectionSpinner
                android:id="@+id/day_selection_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_margin="10dp"
                android:spinnerMode="dialog"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/static_route_time"
                android:id="@+id/text_view_route_time" android:layout_gravity="center_horizontal"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_gravity="right" android:layout_margin="10dp">
            <EditText
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:inputType="time"
                    android:ems="10"
                    android:id="@+id/field_route_time"
                    android:layout_gravity="center" android:textAlignment="center"
                    android:textSize="@dimen/abc_text_size_large_material"/>
            <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/btn_show_time_picker" android:src="@drawable/ic_time_picker"
                    android:scaleType="fitCenter" android:background="@android:color/transparent"/>
        </LinearLayout>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/static_route_start"
                android:id="@+id/text_view_route_start"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_text_select_location"
                android:drawableLeft="@drawable/ic_location_picker"
                android:layout_alignLeft="@+id/username_icon"
                android:id="@+id/btn_show_place_picker" android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"/>
        <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:id="@+id/container_map_create_preview" android:layout_gravity="center_horizontal"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_gravity="center_horizontal"
                android:gravity="center">
            <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:text="@string/btn_text_cancel_route" android:id="@+id/btn_cancel_route"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true" android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_text_create_route"
                    android:id="@+id/btn_create_route" android:layout_gravity="center_horizontal"
                    android:layout_alignParentBottom="true" android:layout_centerHorizontal="true"
                    android:layout_marginLeft="10dp" android:layout_marginRight="10dp"/>
        </LinearLayout>


    </LinearLayout>
</RelativeLayout>
