<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".Views.MainActivity" android:weightSum="1">

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Buscar usuario"
            android:id="@+id/btn_search_usr"
            android:layout_alignTop="@+id/btn_new_route" android:layout_alignParentEnd="true"/>
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="50dp"
                  android:layout_weight="0.40">
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/static_main_groups"
                  android:id="@+id/textView4"/>
        <ListView android:layout_width="match_parent" android:layout_height="match_parent"
                  android:id="@+id/listView_main_group" android:layout_centerHorizontal="true"
                  android:layout_margin="5dp"/>
    </LinearLayout>
    <Button android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/btn_text_new_group"
            android:id="@+id/btn_new_group" android:layout_alignParentTop="true" android:layout_alignParentStart="true"
            android:layout_gravity="center_horizontal" android:layout_margin="5dp"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="50dp" android:layout_weight="0.40">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/static_main_routes"
                android:id="@+id/textView2"/>
        <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/listView_main_route"
                android:layout_centerHorizontal="true" android:layout_margin="5dp"/>
    </LinearLayout>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nueva Ruta"
            android:id="@+id/btn_new_route" android:layout_alignParentTop="true" android:layout_alignParentStart="true"
            android:layout_gravity="center_horizontal" android:layout_margin="5dp"/>
</LinearLayout>
