<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.unal.davsanba.biciparche.Forms.ProfileOperationsActivity"
        android:gravity="center_horizontal">

    <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:id="@+id/image_profile_photo"/>
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
                android:layout_width="@android:dimen/notification_large_icon_width"
                android:layout_height="match_parent"
                android:id="@+id/icon_profile_name" android:src="@drawable/ic_profile"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/field_profile_name" android:editable="false"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
                  android:layout_height="wrap_content">
        <ImageView android:layout_width="@android:dimen/notification_large_icon_width" android:layout_height="match_parent"
                   android:id="@+id/icon_profile_mail" android:src="@drawable/ic_mail"/>
        <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:inputType="textEmailAddress" android:ems="10" android:id="@+id/field_profile_mail"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
                  android:layout_height="wrap_content">
        <ImageView android:layout_width="@android:dimen/notification_large_icon_width" android:layout_height="match_parent"
                   android:id="@+id/icon_profile_phone" android:src="@drawable/ic_phone_number"/>
        <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:inputType="number" android:ems="10" android:id="@+id/field_profile_phone"/>
    </LinearLayout>
    <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_gravity="center_horizontal"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/static_select_department" android:text="@string/static_select_department"/>
    <Spinner
            android:id="@+id/spinner_select_department"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:textAppearance="?android:attr/textAppearanceMedium"
              android:text="@string/static_select_career" android:id="@+id/static_select_career"/>
    <Spinner android:layout_width="fill_parent"
             android:layout_height="wrap_content" android:text="dynamic_spinner_select_department"
             android:id="@+id/spinner_select_career"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_profile_done"
            android:id="@+id/btn_profile_done" android:layout_gravity="center_horizontal"/>
</LinearLayout>
